// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderConfig snapshot — every agent × every transport > aider × remote-http 1`] = `[Error: Agent "aider" uses installStrategy "guided-manual"; renderConfig/renderEntry only support "config-file" agents.]`;

exports[`renderConfig snapshot — every agent × every transport > aider × stdio 1`] = `[Error: Agent "aider" uses installStrategy "guided-manual"; renderConfig/renderEntry only support "config-file" agents.]`;

exports[`renderConfig snapshot — every agent × every transport > amp × stdio 1`] = `[Error: Agent "amp" uses installStrategy "vendor-cli"; renderConfig/renderEntry only support "config-file" agents.]`;

exports[`renderConfig snapshot — every agent × every transport > antigravity × remote-http 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "serverUrl": "https://app.lyrashieldai.com/api/mcp",
      "headers": {
        "Authorization": "Bearer lsk_test_lyrashield_api_key"
      }
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > antigravity × stdio 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "command": "npx",
      "args": [
        "-y",
        "@lyrashield/mcp"
      ],
      "env": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
      }
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > claude-code × remote-http 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "url": "https://app.lyrashieldai.com/api/mcp",
      "headers": {
        "Authorization": "Bearer lsk_test_lyrashield_api_key"
      },
      "type": "http"
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > claude-code × stdio 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "command": "npx",
      "args": [
        "-y",
        "@lyrashield/mcp"
      ],
      "env": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
      }
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > claude-code-agent-plugin × stdio 1`] = `[Error: Agent "claude-code-agent-plugin" uses installStrategy "agent-plugin"; use the CLI agent-plugin installer (lyrashield install), not renderConfig/renderEntry.]`;

exports[`renderConfig snapshot — every agent × every transport > cline × remote-http 1`] = `[Error: Agent "cline" uses installStrategy "guided-manual"; renderConfig/renderEntry only support "config-file" agents.]`;

exports[`renderConfig snapshot — every agent × every transport > cline × stdio 1`] = `[Error: Agent "cline" uses installStrategy "guided-manual"; renderConfig/renderEntry only support "config-file" agents.]`;

exports[`renderConfig snapshot — every agent × every transport > codebuff × stdio 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "command": "npx",
      "args": [
        "-y",
        "@lyrashield/mcp"
      ],
      "env": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
      }
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > copilot-cli × remote-http 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "url": "https://app.lyrashieldai.com/api/mcp",
      "headers": {
        "Authorization": "Bearer lsk_test_lyrashield_api_key"
      },
      "type": "http"
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > copilot-cli × stdio 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "command": "npx",
      "args": [
        "-y",
        "@lyrashield/mcp"
      ],
      "env": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
      },
      "type": "local"
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > cursor × remote-http 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "url": "https://app.lyrashieldai.com/api/mcp",
      "headers": {
        "Authorization": "Bearer lsk_test_lyrashield_api_key"
      },
      "type": "http"
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > cursor × stdio 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "command": "npx",
      "args": [
        "-y",
        "@lyrashield/mcp"
      ],
      "env": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
      }
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > cursor-agent-plugin × stdio 1`] = `[Error: Agent "cursor-agent-plugin" uses installStrategy "agent-plugin"; use the CLI agent-plugin installer (lyrashield install), not renderConfig/renderEntry.]`;

exports[`renderConfig snapshot — every agent × every transport > devin-cli × stdio 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "command": "npx",
      "args": [
        "-y",
        "@lyrashield/mcp"
      ],
      "env": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
      }
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > gemini-cli × stdio 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "command": "npx",
      "args": [
        "-y",
        "@lyrashield/mcp"
      ],
      "env": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
      }
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > github-copilot-agent-plugin × stdio 1`] = `[Error: Agent "github-copilot-agent-plugin" uses installStrategy "agent-plugin"; use the CLI agent-plugin installer (lyrashield install), not renderConfig/renderEntry.]`;

exports[`renderConfig snapshot — every agent × every transport > goose × remote-http 1`] = `[Error: Agent "goose" uses installStrategy "guided-manual"; renderConfig/renderEntry only support "config-file" agents.]`;

exports[`renderConfig snapshot — every agent × every transport > goose × stdio 1`] = `[Error: Agent "goose" uses installStrategy "guided-manual"; renderConfig/renderEntry only support "config-file" agents.]`;

exports[`renderConfig snapshot — every agent × every transport > hermes × stdio 1`] = `[Error: Agent "hermes" uses installStrategy "guided-manual"; renderConfig/renderEntry only support "config-file" agents.]`;

exports[`renderConfig snapshot — every agent × every transport > jetbrains × stdio 1`] = `[Error: Agent "jetbrains" uses installStrategy "guided-manual"; renderConfig/renderEntry only support "config-file" agents.]`;

exports[`renderConfig snapshot — every agent × every transport > kilo-code × remote-http 1`] = `[Error: renderConfig cannot preserve JSONC comments; use renderEntry + mergeJsonc instead.]`;

exports[`renderConfig snapshot — every agent × every transport > kilo-code × stdio 1`] = `[Error: renderConfig cannot preserve JSONC comments; use renderEntry + mergeJsonc instead.]`;

exports[`renderConfig snapshot — every agent × every transport > kiro-agent-plugin × stdio 1`] = `[Error: Agent "kiro-agent-plugin" uses installStrategy "agent-plugin"; use the CLI agent-plugin installer (lyrashield install), not renderConfig/renderEntry.]`;

exports[`renderConfig snapshot — every agent × every transport > mimo-code × remote-http 1`] = `
"{
  "mcp": {
    "lyrashield": {
      "url": "https://app.lyrashieldai.com/api/mcp",
      "headers": {
        "Authorization": "Bearer lsk_test_lyrashield_api_key"
      },
      "type": "remote"
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > mimo-code × stdio 1`] = `
"{
  "mcp": {
    "lyrashield": {
      "command": [
        "npx",
        "-y",
        "@lyrashield/mcp"
      ],
      "environment": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
      },
      "enabled": true,
      "type": "local"
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > oh-my-pi × remote-http 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "url": "https://app.lyrashieldai.com/api/mcp",
      "headers": {
        "Authorization": "Bearer lsk_test_lyrashield_api_key"
      },
      "type": "http"
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > oh-my-pi × stdio 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "command": "npx",
      "args": [
        "-y",
        "@lyrashield/mcp"
      ],
      "env": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
      }
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > openai-codex × stdio 1`] = `
"[mcp_servers.lyrashield]
command = "npx"
args = ["-y", "@lyrashield/mcp"]

[mcp_servers.lyrashield.env_vars]
LYRASHIELD_API_URL = "https://app.lyrashieldai.com"
LYRASHIELD_API_KEY = "lsk_test_lyrashield_api_key""
`;

exports[`renderConfig snapshot — every agent × every transport > openai-codex-agent-plugin × stdio 1`] = `[Error: Agent "openai-codex-agent-plugin" uses installStrategy "agent-plugin"; use the CLI agent-plugin installer (lyrashield install), not renderConfig/renderEntry.]`;

exports[`renderConfig snapshot — every agent × every transport > openclaw × stdio 1`] = `[Error: Agent "openclaw" uses installStrategy "guided-manual"; renderConfig/renderEntry only support "config-file" agents.]`;

exports[`renderConfig snapshot — every agent × every transport > opencode × remote-http 1`] = `
"{
  "mcp": {
    "lyrashield": {
      "url": "https://app.lyrashieldai.com/api/mcp",
      "headers": {
        "Authorization": "Bearer {env:LYRASHIELD_API_KEY}"
      },
      "type": "remote"
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > opencode × stdio 1`] = `
"{
  "mcp": {
    "lyrashield": {
      "command": "npx",
      "args": [
        "-y",
        "@lyrashield/mcp"
      ],
      "env": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "{env:LYRASHIELD_API_KEY}"
      },
      "type": "local"
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > picode × stdio 1`] = `[Error: Agent "picode" uses installStrategy "guided-manual"; renderConfig/renderEntry only support "config-file" agents.]`;

exports[`renderConfig snapshot — every agent × every transport > roo-code × remote-http 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "url": "https://app.lyrashieldai.com/api/mcp",
      "headers": {
        "Authorization": "Bearer lsk_test_lyrashield_api_key"
      },
      "type": "streamable-http"
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > roo-code × stdio 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "command": "npx",
      "args": [
        "-y",
        "@lyrashield/mcp"
      ],
      "env": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
      }
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > vscode × remote-http 1`] = `
"{
  "servers": {
    "lyrashield": {
      "url": "https://app.lyrashieldai.com/api/mcp",
      "headers": {
        "Authorization": "Bearer lsk_test_lyrashield_api_key"
      },
      "type": "http"
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > vscode × stdio 1`] = `
"{
  "servers": {
    "lyrashield": {
      "command": "npx",
      "args": [
        "-y",
        "@lyrashield/mcp"
      ],
      "env": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
      },
      "type": "stdio"
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > vscode-agent-plugin × stdio 1`] = `[Error: Agent "vscode-agent-plugin" uses installStrategy "agent-plugin"; use the CLI agent-plugin installer (lyrashield install), not renderConfig/renderEntry.]`;

exports[`renderConfig snapshot — every agent × every transport > windsurf × remote-http 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "serverUrl": "https://app.lyrashieldai.com/api/mcp",
      "headers": {
        "Authorization": "Bearer lsk_test_lyrashield_api_key"
      }
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > windsurf × stdio 1`] = `
"{
  "mcpServers": {
    "lyrashield": {
      "command": "npx",
      "args": [
        "-y",
        "@lyrashield/mcp"
      ],
      "env": {
        "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
        "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
      }
    }
  }
}"
`;

exports[`renderConfig snapshot — every agent × every transport > zed × stdio 1`] = `
"{
  "context_servers": {
    "lyrashield": {
      "command": {
        "path": "npx",
        "args": [
          "-y",
          "@lyrashield/mcp"
        ],
        "env": {
          "LYRASHIELD_API_URL": "https://app.lyrashieldai.com",
          "LYRASHIELD_API_KEY": "lsk_test_lyrashield_api_key"
        }
      }
    }
  }
}"
`;
